--- a/src/App.css
+++ b/src/App.css
@@ -7,14 +7,10 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+
 
 .App-header {
-  background-color: #282c34;
+  background-color: #3fc9eb;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -35,4 +31,15 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+h1{
+  text-align: center;
+}
+
+
+.App{
+  color: aliceblue;
+  background-color: black;
+  padding: 15px;
 }
