--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,6 @@
 }
 
 
-
 .App-header {
   background-color: #3fc9eb;
   min-height: 100vh;
@@ -42,8 +41,7 @@ h1{
 }
 
 
-.App{
-  color: aliceblue;
+.App nav {
   background-color: black;
   padding: 15px;
 }
@@ -76,9 +74,60 @@ nav ul{
   color: black;
   text-align: center;
   padding: 25px;
-  background-color: bisque;
-  margin: 0%;
+  background-color: yellow;
+  margin-top: -5px;
 }
 
+.contenedorProducto{
+  border: 2px solid black;
+  background-color: rgb(35, 27, 204);
+  color: aliceblue;
+  display: inline-block;
+  width: 300px;
+  margin: 15px;
+  border-radius: 12px;
+  text-align: center;
+  
+}
+
+.nombreYprecio{
+  background-color: black;
+  color: aliceblue;
+  padding: 15px;
+}
+
+.contenedorProducto img{
+  padding: 25px;
+}
+
+#botonComprar{
+  font-size: large;
+    padding: 5px;
+    margin-top: 15px;
+    margin-left: 15px;
+    margin-bottom: 25px;
+    border-radius: 5px;
+    background-color: black;
+    color: white;
+
+}
+
+#botonComprar:hover{
+  border: 2px solid black;
+  background-color: aliceblue;
+  color: black;
+  font-weight: bold;
+}
+
+#foto {
+  text-align: center;
+  width: 100%; /* Establece el ancho al 100% */
+  height: auto; /* Altura automática para mantener la proporción */
+}
+
+.foco{
+ margin: -5px;
+ background-color: yellow;
+}
 
 
